--- a/contact.html
+++ b/contact.html
@@ -11,11 +11,11 @@
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico">
 	<link rel="canonical" href="https://marysau.github.io/MaryleneSaurat_4_16022021/contact.html"/>
 
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
-	
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
+	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+   
     
 <!-- Analytics -->
  
@@ -23,50 +23,57 @@
 </head>
 
 <body>
-<!-- Principal conteneur -->
-<div class="page-container">
-    
+	<!-- Principal conteneur -->
+	<div class="page-container">
+	
 <!-- bloc-0 -->
-<header class="bloc bgc-white l-bloc " id="bloc-0">
-	<div class="container bloc-sm">
+<header class="bloc bloc-sm bgc-white l-bloc" id="bloc-0">
+	<!--<div class="container bloc-sm">-->
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.jpg" alt="Logo de La chouette agence" height="40" /></a>
-				<!--<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>-->
+				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.jpg" alt="Logo de La chouette agence"
+					/></a>
+				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
 			</div>
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li><a href="index.html">Accueil</a></li>
-					<li></li>
+					<li><a href="index.html#bloc-2-services">Nos métiers</a></li>
+					<li><a href="index.html#bloc-4-portfolio">Nos réalisations</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
 		</nav>
-	</div>
+	<!--</div>-->
 </header>
 <!-- bloc-0 END -->
 
 <!-- bloc-6 -->
-<section class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
-	<div class="container bloc-lg">
+<section class="bloc bloc-lg bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
+	<!--<div class="container bloc-lg">-->
 		<div class="row">
 			<div class="col-sm-12">
-				<h1 class="text-center hero-bloc-text tc-white">
+				<h1 class="white text-center hero-bloc-text">
 					Parlons web design !
 				</h1>
-				<p class="text-center mg-lg tc-white tight-width-whitespace">
+				<p class="white text-center mg-lg tight-width-whitespace">
 					Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
 					Parlez-nous de votre projet en complétant le formulaire ci-dessous.
 				</p>
 			</div>
 		</div>
-	</div>
+	<!--</div>-->
 </section>
 <!-- bloc-6 END -->
 
 <!-- bloc-7 -->
-<section class="bloc bgc-white l-bloc" id="bloc-7">
-	<div class="container bloc-lg">
+<section class="bloc bloc-lg bgc-white l-bloc" id="bloc-7">
+	<!--<div class="container bloc-lg">-->
 		<div class="row">
 			<div class="col-sm-6">
 				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
@@ -74,37 +81,38 @@
 						<label>
 							Nom
 						</label>
-						<input id="name" class="form-control" required />
+						<input id="name" class="form-control" type="text" placeholder="Entrez votre nom et prénom" required=""/>
 					</div>
 					<div class="form-group">
 						<label>
 							Adresse email
 						</label>
-						<input id="email" class="form-control" type="email" required />
+						<input id="email" class="form-control" type="email" placeholder="Entrez une adresse email valide" required="" aria-invalid="false"/>
 					</div>
 					<div class="form-group">
 						<label>
 							Comment nous avez-vous connu ?
 						</label>
-						<input class="form-control" type="email" required id="input_504" />
+						<input id="info" class="form-control" type="text" placeholder="Racontez-nous" required=""/>
 					</div>
 					<div class="form-group">
 						<label>
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-						</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+						</label>
+						<textarea id="message" class="form-control" rows="4" cols="50" placeholder="Entrez votre message" required=""></textarea>
 					</div> 
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
 					</button>
 				</form>
 			</div>
-			<div class="col-sm-6">
+			<div class="col-sm-6 nav-center">
 				<p>
 					contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 				</p>
 			</div>
 		</div>
-	</div>
+	<!--</div>-->
 </section>
 <!-- bloc-7 END -->
 
@@ -114,15 +122,15 @@
 
 
 <!-- Footer - bloc-8 -->
-<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
-	<div class="container bloc-sm">
+<footer class="bloc bloc-sm bgc-atomic-tangerine d-bloc" id="bloc-8">
+	<!--<div class="container bloc-sm">-->
 		<div class="col-sm-12">
-			<p class="text-center white bold">
+			<p class="text-center black bold">
 				La chouette agence - Agence web basée à Lyon.<br>
 			</p>
 			<div class="row social">
 				<div class="col-sm-3 text-center">
-					<a class="social" href="https://www.twitter.com" title="Twitter"><span class="fa fa-twitter icon-md"></span></a>
+					<a class="social" href="https://www.twitter.com" title="Twitter" target="_blank" rel="noreferrer noopener"><span class="fa fa-twitter icon-md"></span></a>
 				</div>
 				<div class="col-sm-3 text-center">
 					<a class="social" href="https://www.facebook.com" title="Facebook" target="_blank" rel="noreferrer noopener"><span class="fa fa-facebook icon-md"></span></a>
@@ -136,7 +144,7 @@
 			</div>
 		</div>
 		<div class="col-sm-12 ">
-			<p class="text-center white bold">
+			<p class="text-center black bold">
 				Partenaires
 			</p>
 			<div class="row partenaire">
@@ -151,9 +159,11 @@
 				</div>
 			</div>	
 		</div>
-	</div>
+	<!--</div>-->
 </footer>
 <!-- Footer - bloc-8 END -->
+
+
 </div>
 <!-- Principal conteneur END -->
 
