--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 <div class="page-container">
 
 <!-- bloc-0 -->
-<header class="bloc bgc-white l-bloc" id="bloc-0">
-	<div class="container bloc-sm">
+<header class="bloc bloc-sm bgc-white l-bloc" id="bloc-0">
+	<!--<div class="container bloc-sm">-->
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.jpg" alt="Logo de La chouette agence"/></a>
+				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.jpg" alt="Logo de La chouette agence" height="40" width="215"/></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span>
 					<span class="icon-bar"></span>
@@ -47,13 +47,13 @@
 				</ul>
 			</div>
 		</nav>
-	</div>
+	<!--</div>-->
 </header>
 <!-- bloc-0 END -->
 
 <!-- bloc-1-presentation -->
-<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
-	<div class="container bloc-lg">
+<section class="bloc bloc-lg bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge loc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+	<!--<div class="container bloc-lg">-->
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
 				<img src="img/logo-la-chouette-agence.jpg" class="center-block image-resize-mode" alt="Logo de La chouette agence"/>
@@ -67,13 +67,13 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	<!--</div>-->
 </section>
 <!-- bloc-1-presentation END -->
 
 <!-- bloc-2-services -->
-<section class="bloc bgc-white l-bloc" id="bloc-2-services">
-	<div class="container bloc-md">
+<section class="bloc bloc-md bgc-white l-bloc" id="bloc-2-services">
+	<!--<div class="container bloc-md">-->
 		<div class="row">
 			<div class="col-sm-12 text-center">
 				<h2>
@@ -128,13 +128,13 @@
 				<p>Maxime Guibard, PDG de à nos Fourchettes</p>
 			</div>
 		</div>
-	</div>
+	<!--</div>-->
 </section>
 <!-- bloc-2-services END -->
 
 <!-- bloc-3-what-i-do -->
-<section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
-	<div class="container bloc-lg">
+<section class="bloc bloc-lg tc-white bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
+	<!--<div class="container bloc-lg">-->
 		<div class="row tight-width-whitespace black-background">
 			<div class="col-sm-12">
 				<h2 class="mg-md text-center tc-yellow">
@@ -145,13 +145,14 @@
 				</p>
 			</div>
 		</div>
-	</div>
+	<!--</div>-->
 </section>
 <!-- bloc-3-what-i-do END -->
 
 <!-- bloc-4-portfolio -->
-<section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
-	<div class="container bloc-lg">
+<section class="bloc bloc-lg bgc-white 
+ines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
+	<!--<div class="container bloc-lg">-->
 		<div class="row">
 			<div class="col-sm-12 text-center">
 				<h2>
@@ -207,28 +208,28 @@
 				</p>
 			</div>
 		</div>
-	</div>
+	<!--</div>-->
 </section>
 <!-- bloc-4-portfolio END -->
 
 <!-- bloc-5-cta -->
-<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
-	<div class="container bloc-lg">
+<section class="bloc bloc-lg bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+	<!--<div class="container bloc-lg">-->
 		<div class="row">
-			<h2 class="mg-md text-center tc-yellow">
-				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
-			</h2>
 			<div class="col-sm-12 text-center">
+				<h2 class="mg-md text-center tc-yellow">
+					Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
+				</h2>
 				<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 			</div>
 		</div>
-	</div>
+	<!--</div>-->
 </section>
 <!-- bloc-5-cta END -->
 
 <!-- Footer - bloc-8 -->
-<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
-	<div class="container bloc-sm">
+<footer class="bloc bloc-sm bgc-atomic-tangerine d-bloc" id="bloc-8">
+	<!--<div class="container bloc-sm">-->
 		<div class="col-sm-12">
 			<p class="text-center black bold">
 				La chouette agence - Agence web basée à Lyon.<br>
@@ -264,7 +265,7 @@
 				</div>
 			</div>	
 		</div>
-	</div>
+	<!--</div>-->
 </footer>
 <!-- Footer - bloc-8 END -->
 </div>
