--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,11 @@
 	<title>La Chouette Agence - Contact</title>
 
     <meta charset="utf-8">
-    <meta name="description" content="Prêt pour redonner vie à votre projet ? Contactez La Chouette agence et parlez-nous de ce projet. Notre équipe aura le plaisir de vous contacter au plus vite et de commencer à le modeler selon vos besoins">
+    <meta name="description" content="Prêt pour redonner vie 
+		à votre projet ? Contactez La Chouette agence et 
+		parlez-nous de ce projet. Notre équipe aura le plaisir 
+		de vous contacter au plus vite et de commencer à le 
+		modeler selon vos besoins">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robots" content="index, follow">
 
@@ -23,7 +27,6 @@
 	
 <!-- bloc-0 -->
 <header class="bloc bloc-sm bgc-white l-bloc" id="bloc-0">
-	<!--<div class="container bloc-sm">-->
 		<nav class="navbar row">
 			<div class="navbar-header">
 				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.jpg" alt="Logo de La chouette agence" height="40" width="215"/></a>
@@ -43,13 +46,11 @@
 				</ul>
 			</div>
 		</nav>
-	<!--</div>-->
 </header>
 <!-- bloc-0 END -->
 
 <!-- bloc-6 -->
 <section class="bloc bloc-lg bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
-	<!--<div class="container bloc-lg">-->
 		<div class="row">
 			<div class="col-sm-12">
 				<h1 class="white text-center hero-bloc-text">
@@ -61,16 +62,14 @@
 				</p>
 			</div>
 		</div>
-	<!--</div>-->
 </section>
 <!-- bloc-6 END -->
 
 <!-- bloc-7 -->
 <section class="bloc bloc-lg bgc-white l-bloc" id="bloc-7">
-	<!--<div class="container bloc-lg">-->
 		<div class="row">
 			<div class="col-sm-6">
-				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+				<form id="form_1" novalidate="">
 					<div class="form-group">
 						<label>
 							Nom
@@ -101,12 +100,10 @@
 				</form>
 			</div>
 			<div class="col-sm-6 text-center">
-				<p>
-					contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
-				</p>
+				<h2>Contactez-nous !</h2>
+				<p>contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br></p>
 			</div>
 		</div>
-	<!--</div>-->
 </section>
 <!-- bloc-7 END -->
 
@@ -117,7 +114,6 @@
 
 <!-- Footer - bloc-8 -->
 <footer class="bloc bloc-sm bgc-atomic-tangerine d-bloc" id="bloc-8">
-	<!--<div class="container bloc-sm">-->
 		<div class="col-sm-12">
 			<p class="text-center black bold">
 				La chouette agence - Agence web basée à Lyon.<br>
@@ -153,7 +149,6 @@
 				</div>
 			</div>	
 		</div>
-	<!--</div>-->
 </footer>
 <!-- Footer - bloc-8 END -->
 
