--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 	<title>La Chouette Agence - Agence de Web Design à Lyon</title>
    
 	<meta charset="utf-8">
-    <meta name="description" content="La chouette agence est une entreprise de web design à Lyon qui aide les entreprises à devenir attractives et visibles sur Internet">
+    <meta name="description" content="La chouette agence est une 
+		entreprise de web design à Lyon qui aide les entreprises à 
+		devenir attractives et visibles sur Internet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robots" content="index, follow">
 
@@ -23,7 +25,6 @@
 
 <!-- bloc-0 -->
 <header class="bloc bloc-sm bgc-white l-bloc" id="bloc-0">
-	<!--<div class="container bloc-sm">-->
 		<nav class="navbar row">
 			<div class="navbar-header">
 				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.jpg" alt="Logo de La chouette agence" height="40" width="215"/></a>
@@ -43,13 +44,11 @@
 				</ul>
 			</div>
 		</nav>
-	<!--</div>-->
 </header>
 <!-- bloc-0 END -->
 
 <!-- bloc-1-presentation -->
 <section class="bloc bloc-lg bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
-	<!--<div class="container bloc-lg">-->
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
 				<img src="img/logo-la-chouette-agence.jpg" class="center-block image-resize-mode" alt="Logo de La chouette agence"/>
@@ -63,13 +62,11 @@
 				</div>
 			</div>
 		</div>
-	<!--</div>-->
 </section>
 <!-- bloc-1-presentation END -->
 
 <!-- bloc-2-services -->
 <section class="bloc bloc-md bgc-white l-bloc" id="bloc-2-services">
-	<!--<div class="container bloc-md">-->
 		<div class="row">
 			<div class="col-sm-12 text-center">
 				<h2>
@@ -124,13 +121,11 @@
 				<p>Maxime Guibard, PDG de à nos Fourchettes</p>
 			</blockquote>
 		</div>
-	<!--</div>-->
 </section>
 <!-- bloc-2-services END -->
 
 <!-- bloc-3-what-i-do -->
 <section class="bloc bloc-lg tc-white bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
-	<!--<div class="container bloc-lg">-->
 		<div class="row tight-width-whitespace black-background">
 			<div class="col-sm-12">
 				<h2 class="mg-md text-center tc-yellow">
@@ -141,14 +136,11 @@
 				</p>
 			</div>
 		</div>
-	<!--</div>-->
 </section>
 <!-- bloc-3-what-i-do END -->
 
 <!-- bloc-4-portfolio -->
-<section class="bloc bloc-lg bgc-white 
-ines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
-	<!--<div class="container bloc-lg">-->
+<section class="bloc bloc-lg bgc-white ines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 		<div class="row">
 			<div class="col-sm-12 text-center">
 				<h2>
@@ -204,13 +196,11 @@ ines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 				</p>
 			</div>
 		</div>
-	<!--</div>-->
 </section>
 <!-- bloc-4-portfolio END -->
 
 <!-- bloc-5-cta -->
 <section class="bloc bloc-lg bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
-	<!--<div class="container bloc-lg">-->
 		<div class="row">
 			<div class="col-sm-12 text-center">
 				<h2 class="mg-md text-center tc-yellow">
@@ -219,13 +209,11 @@ ines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 				<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 			</div>
 		</div>
-	<!--</div>-->
 </section>
 <!-- bloc-5-cta END -->
 
 <!-- Footer - bloc-8 -->
 <footer class="bloc bloc-sm bgc-atomic-tangerine d-bloc" id="bloc-8">
-	<!--<div class="container bloc-sm">-->
 		<div class="col-sm-12">
 			<p class="text-center black bold">
 				La chouette agence - Agence web basée à Lyon.<br>
@@ -261,7 +249,6 @@ ines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 				</div>
 			</div>	
 		</div>
-	<!--</div>-->
 </footer>
 <!-- Footer - bloc-8 END -->
 </div>
