--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,7 @@
 	<title>La Chouette Agence - Contact</title>
 
     <meta charset="utf-8">
-    <meta name="description" content="Prêt pour redonner vie 
-		à votre projet ? Contactez La Chouette agence et 
-		parlez-nous de ce projet. Notre équipe aura le plaisir 
-		de vous contacter au plus vite et de commencer à le 
-		modeler selon vos besoins">
+    <meta name="description" content="Prêt pour redonner vie à votre projet ? Contactez La Chouette agence et parlez-nous de ce projet. Notre équipe aura le plaisir de vous contacter au plus vite et de commencer à le modeler selon vos besoins">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robots" content="index, follow">
 
@@ -49,6 +45,7 @@
 </header>
 <!-- bloc-0 END -->
 
+<main>
 <!-- bloc-6 -->
 <section class="bloc bloc-lg bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
 		<div class="row">
@@ -110,7 +107,7 @@
 <!-- ScrollToTop Button -->
 <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
 <!-- ScrollToTop Button END-->
-
+</main>
 
 <!-- Footer - bloc-8 -->
 <footer class="bloc bloc-sm bgc-atomic-tangerine d-bloc" id="bloc-8">
@@ -151,7 +148,6 @@
 		</div>
 </footer>
 <!-- Footer - bloc-8 END -->
-
 
 </div>
 <!-- Principal conteneur END -->
