--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 	<title>La Chouette Agence - Agence de Web Design à Lyon</title>
    
 	<meta charset="utf-8">
-    <meta name="description" content="La chouette agence est une 
-		entreprise de web design à Lyon qui aide les entreprises à 
-		devenir attractives et visibles sur Internet">
+    <meta name="description" content="La chouette agence est une entreprise de web design à Lyon qui aide les entreprises à devenir attractives et visibles sur Internet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robots" content="index, follow">
 
@@ -47,14 +45,14 @@
 </header>
 <!-- bloc-0 END -->
 
+<main>
 <!-- bloc-1-presentation -->
 <section class="bloc bloc-lg bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
 				<img src="img/logo-la-chouette-agence.jpg" class="center-block image-resize-mode" alt="Logo de La chouette agence"/>
 				<h1 class="text-center hero-bloc-text tc-yellow">
-					<strong>La chouette agence</strong>
-					<br>
+					<strong>La chouette agence</strong><br>
 					Agence de web design basée à Lyon 
 				</h1>
 				<div class="text-center">
@@ -70,7 +68,8 @@
 		<div class="row">
 			<div class="col-sm-12 text-center">
 				<h2>
-					La chouette agence est une agence de web design qui aide <br>les entreprises à devenir attractives et visibles sur Internet.
+					La chouette agence est une agence de web design qui aide<br>
+					les entreprises à devenir attractives et visibles sur Internet.
 				</h2>
 			</div>
 		</div>
@@ -113,9 +112,7 @@
 			<blockquote class="blockquote col-xs-12 col-md-8 col-md-offset-2 text-center">
 				<h3>
 					<em>
-					"La chouette agence est une excellente agence web !
-					Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site.
-					Cela nous a aidé à doubler nos ventes en ligne à Lyon"
+					"La chouette agence est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon"
 					</em>
 				</h3>
 				<p>Maxime Guibard, PDG de à nos Fourchettes</p>
@@ -204,19 +201,21 @@
 		<div class="row">
 			<div class="col-sm-12 text-center">
 				<h2 class="mg-md text-center tc-yellow">
-					Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
+					Prêt pour redonner vie à votre projet ?<br>
+					Contactez notre équipe !
 				</h2>
 				<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 			</div>
 		</div>
 </section>
 <!-- bloc-5-cta END -->
+</main>
 
 <!-- Footer - bloc-8 -->
 <footer class="bloc bloc-sm bgc-atomic-tangerine d-bloc" id="bloc-8">
 		<div class="col-sm-12">
 			<p class="text-center black bold">
-				La chouette agence - Agence web basée à Lyon.<br>
+				La chouette agence - Agence web basée à Lyon.
 			</p>
 			<div class="row social">
 				<div class="col-sm-3 text-center">
@@ -239,7 +238,7 @@
 			</p>
 			<div class="row partenaire">
 				<div class="col-sm-3 text-center">
-					<a class="partenaire-a" href="#" title="Mairie de Lyon" target="_blank" rel="noreferrer noopener">Mairie de Lyon</a>
+					<a 	class="partenaire-a" href="#" title="Mairie de Lyon" target="_blank" rel="noreferrer noopener">Mairie de Lyon</a>
 				</div>
 				<div class="col-sm-3 text-center">
 					<a class="partenaire-a" href="#" title="Reservia" target="_blank" rel="noreferrer noopener">Reservia</a>
